Fix InitializeDatabase.java
refs #60209 @20m